# code

./: .gitignore  .gitmodules  README.md
advance/ddd/: fizz_buzz.py
advance/design_patterns/: 白话设计模式 28 讲.ipynb
advance/tdd/: README.md
ai/: README.md  requirements.txt
ai/ai/: README.md
ai/analyse/: caffe.py  chart.ipynb  jupyter_notebook.ipynb  matplotlib.ipynb  numpy.ipynb  pandas.ipynb  pytorch.ipynb  scikit-learn.ipynb  tensorflow.ipynb
ai/crawler/: crawler_1.py  download_photos.py  download_photos1.py
ai/dlfs/: ch4_nns.ipynb  gate.ipynb  mnist_show.py  neuralnet_mnist.py  nns.py
ai/handson-ml3/: requirements.txt
ai/nlp/: jieba_demo.ipynb
ai/pydata-book/: ch02.ipynb  ch10.ipynb  ch14.ipynb  ipython_script_test.py  requirements.txt
ai/rnn/: NN.py  example.ipynb
basic/algorithms/: 2182.construct-string-with-repeat-limit.php  35.search-insert-position.php
basic/db/: MongoClient.js  mongoose.js
basic/html/: HTML.html  box.html  form.html  frameset.html  iframe.html  index.html  link.html  multi_media.html  quill.html  student_table.html  svg.html  table.html
basic/linux/: conditionwithmutex.c  create_process.c  downloadfile.c  mutex.c  process.c
basic/native/: get_enddate_after_days_from_begindate.c  get_π_value  in_str_out_with_color.c
basic/network/: dns_query.pcap  http.pcap
client/awesome-links/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
client/cordova_demo/: config.xml  (+2 more)
languages/rust/practice/httpie/: Cargo.toml
languages/rust/practice/httpie/src/: main.rs
tool/: TV_multu_source.json  tv copy.json  tv.json
(+3107 files in other folders)
